# cadview

./: .hgignore  ProjectHome.md  TODO.md  default.workspace
cadcore/: cad_cmd.h  cad_gtk_adaptor.h  cad_gui_view.h  cad_primitives.h  cadcore.cbp  cadcore.depend  cadcore.layout
cadview/: cadview.depend  cadview.layout  notes.txt
gladeui/: cadview.glade  gladeui.cbp  gladeui.depend  gladeui.layout  main.cpp
gtklab/: gtklab.layout
src/: CMakeLists.txt  cadview_config.h.in  default.workspace
src/cadcore/: CMakeLists.txt  cad_document.cpp  cad_document.h  cad_exception.h  cad_gui_view.h  cad_gui_view_input.h  cad_polyline_cmd.h  cad_select_cmd.h  cadcore.cbp  cadcore.depend  cadcore.layout  util.h
src/cadgtk/: CMakeLists.txt  cad_cairo_graphics.h  cad_gtk_adaptor.cpp  cad_gtk_adaptor.h  cadgtk.cbp
src/cadview/: CMakeLists.txt  cadview.cbp  cadview.depend  cadview.layout  main.cpp  notes.txt  slate.cpp  slate.h
src/cadwin/: cad_gdiplus_adaptor.h  cad_win_adaptor.h  cadwin.sln  cadwin.vcxproj
src/gladeui/: CMakeLists.txt  cadview.glade  gladeui.cbp  gladeui.depend  gladeui.layout  main.cpp  slate.cpp  slate.h
src/gtklab/: CMakeLists.txt  gtklab.cbp  gtklab.depend  gtklab.layout  main.c
src/msvc/: msvc.sln
src/msvc/cadcore/: cadcore.vcxproj
src/msvc/cadgtk/: cadgtk.vcxproj
src/msvc/gladeui/: gladeui.vcxproj
src/msvc/winui/: CadWnd.cpp  CadWnd.h  CmdLineWnd.cpp  CmdLineWnd.h  LogWnd.cpp  LogWnd.h  MainWnd.cpp  MainWnd.h  main.cpp  resource.h  stdafx.h  winui.rc  winui.vcxproj
src/msvc/winui/App0/: BaseWnd.cpp  BaseWnd.h  Utility.cpp  Utility.h  Wnd0.cpp  Wnd0.h
